--- a/index.html
+++ b/index.html
@@ -343,10 +343,12 @@
             <div class="text-slate-300 mb-4">Lihat popularitas dan konten terkait untuk tag ini di platform berikut:</div>
             <div class="space-y-3">
                 <a id="instagram-link" href="#" target="_blank" class="flex items-center justify-center gap-3 w-full text-white font-bold py-3 px-4 rounded-lg bg-gradient-to-r from-pink-500 via-red-500 to-yellow-500 hover:opacity-90 transition-opacity">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
-                        <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8s.01 2.444.048 3.297c.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 8 0zm0 1.442a6.556 6.556 0 0 1 3.25.045c.78.034 1.164.163 1.405.27.29.13.518.31.728.518.21.21.388.438.518.728.107.24.237.625.27 1.405.046.86.054 1.134.054 3.25s-.008 2.39-.054 3.25c-.033.78-.163 1.165-.27 1.405a2.47 2.47 0 0 1-.518.728c-.21.21-.438.388-.728.518-.24.107-.625.237-1.405.27-.86.046-1.134.054-3.25.054s-2.39-.008-3.25-.054c-.78-.033-1.165-.163-1.405-.27a2.47 2.47 0 0 1-.728-.518c-.21-.21-.388-.438-.518-.728-.107-.24-.237-.625-.27-1.405-.046-.86-.054-1.134-.054-3.25s.008-2.39.054-3.25c.033-.78.163-1.165.27-1.405a2.47 2.47 0 0 1 .518-.728c.21-.21.438-.388.728-.518.24-.107.625-.237 1.405-.27.86-.046 1.134-.054 3.25-.054zM8 4.868a3.132 3.132 0 1 0 0 6.264 3.132 3.132 0 0 0 0-6.264zm0 1.442a1.69 1.69 0 1 1 0 3.38 1.69 1.69 0 0 1 0-3.38zm4.39-1.442a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92z"/>
-                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16"><path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8s.01 2.444.048 3.297c.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 8 0zm0 1.442a6.556 6.556 0 0 1 3.25.045c.78.034 1.164.163 1.405.27.29.13.518.31.728.518.21.21.388.438.518.728.107.24.237.625.27 1.405.046.86.054 1.134.054 3.25s-.008 2.39-.054 3.25c-.033.78-.163 1.165-.27 1.405a2.47 2.47 0 0 1-.518.728c-.21.21-.438.388-.728.518-.24.107-.625.237-1.405.27-.86.046-1.134.054-3.25.054s-2.39-.008-3.25-.054c-.78-.033-1.165-.163-1.405-.27a2.47 2.47 0 0 1-.728-.518c-.21-.21-.388-.438-.518-.728-.107-.24-.237-.625-.27-1.405-.046-.86-.054-1.134-.054-3.25s.008-2.39.054-3.25c.033-.78.163-1.165.27-1.405a2.47 2.47 0 0 1 .518-.728c.21-.21.438-.388.728-.518.24-.107.625-.237 1.405-.27.86-.046 1.134-.054 3.25-.054zM8 4.868a3.132 3.132 0 1 0 0 6.264 3.132 3.132 0 0 0 0-6.264zm0 1.442a1.69 1.69 0 1 1 0 3.38 1.69 1.69 0 0 1 0-3.38zm4.39-1.442a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92z"/></svg>
                     Lihat di Instagram
+                </a>
+                <a id="tiktok-link" href="#" target="_blank" class="flex items-center justify-center gap-3 w-full text-white font-bold py-3 px-4 rounded-lg bg-black border border-slate-600 hover:bg-slate-800 transition-colors">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" viewBox="0 0 16 16"><path d="M9 0h1.98c.144.715.54 1.617 1.235 2.512C12.895 3.389 13.797 4 15 4v2c-1.753 0-3.07-.814-4-1.829V11a5 5 0 1 1-5-5v2a3 3 0 1 0 3 3V0Z"/></svg>
+                    Lihat di TikTok
                 </a>
                 <a id="facebook-link" href="#" target="_blank" class="flex items-center justify-center gap-3 w-full text-white font-bold py-3 px-4 rounded-lg bg-gradient-to-r from-blue-600 to-blue-800 hover:opacity-90 transition-opacity">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" viewBox="0 0 16 16"><path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/></svg>
@@ -998,20 +1000,15 @@ Contoh struktur JSON yang diharapkan:
         });
 
         document.getElementById('script-result-container').addEventListener('click', e => {
-            const wrapper = e.target.closest('.script-section-wrapper');
-            if (!wrapper) return;
-            
-            const editBtn = e.target.closest('.edit-section-btn');
-            const saveBtn = e.target.closest('.save-edit-btn');
-            const cancelBtn = e.target.closest('.cancel-edit-btn');
-            const copyBtn = e.target.closest('.copy-section-btn');
             const hashtagSpan = e.target.closest('.hashtag');
             const audioSpan = e.target.closest('.audio-suggestion');
+            const wrapper = e.target.closest('.script-section-wrapper');
 
             if (hashtagSpan) {
                 const tag = hashtagSpan.dataset.tag;
                 document.getElementById('hashtag-title').textContent = `#${tag}`;
                 document.getElementById('instagram-link').href = `https://www.instagram.com/explore/tags/${tag}/`;
+                document.getElementById('tiktok-link').href = `https://www.tiktok.com/tag/${tag}`;
                 document.getElementById('facebook-link').href = `https://www.facebook.com/hashtag/${tag}`;
                 document.getElementById('hashtagModal').classList.add('visible');
             } else if (audioSpan) {
@@ -1022,33 +1019,43 @@ Contoh struktur JSON yang diharapkan:
                 document.getElementById('youtube-audio-link').href = `https://www.youtube.com/results?search_query=${encodeURIComponent(fullQuery)}`;
                 document.getElementById('spotify-audio-link').href = `https://open.spotify.com/search/${encodeURIComponent(fullQuery)}`;
                 document.getElementById('audioSearchModal').classList.add('visible');
-            } else if(editBtn) {
-                wrapper.querySelector('.script-section-display').classList.add('hidden');
-                wrapper.querySelector('.script-edit-view').classList.remove('hidden');
-            } else if(cancelBtn) {
-                wrapper.querySelector('.script-section-display').classList.remove('hidden');
-                wrapper.querySelector('.script-edit-view').classList.add('hidden');
-                showNotification('Perubahan dibatalkan');
-            } else if(saveBtn) {
-                const sectionKey = wrapper.dataset.sectionKey;
-                const sectionData = currentScriptData[sectionKey];
-                if (typeof sectionData === 'object' && sectionData !== null && !Array.isArray(sectionData)) {
-                    wrapper.querySelectorAll('textarea').forEach(area => { currentScriptData[sectionKey][area.dataset.field] = area.value; });
-                } else {
-                     const mainTextarea = wrapper.querySelector('textarea');
-                      if (Array.isArray(sectionData)) { currentScriptData[sectionKey] = mainTextarea.value.split(',').map(item => item.trim()); } 
-                      else { currentScriptData[sectionKey] = mainTextarea.value; }
+            } else if (wrapper) {
+                const editBtn = e.target.closest('.edit-section-btn');
+                const saveBtn = e.target.closest('.save-edit-btn');
+                const cancelBtn = e.target.closest('.cancel-edit-btn');
+                const copyBtn = e.target.closest('.copy-section-btn');
+                
+                if(editBtn) {
+                    wrapper.querySelector('.script-section-display').classList.add('hidden');
+                    wrapper.querySelector('.script-edit-view').classList.remove('hidden');
                 }
-                displayStructuredScript(currentScriptData);
-                showNotification('Perubahan berhasil disimpan!', false);
-            } else if (copyBtn) {
-                const sectionKey = wrapper.dataset.sectionKey;
-                const sectionData = currentScriptData[sectionKey];
-                let textToCopy = '';
-                if (typeof sectionData === 'string') textToCopy = sectionData;
-                else if (Array.isArray(sectionData)) textToCopy = isNaN(sectionData[0]) ? '#' + sectionData.join(' #') : sectionData.join(', ');
-                else if (typeof sectionData === 'object' && sectionData !== null) textToCopy = `VISUAL: ${sectionData.visual}\nNARASI: ${sectionData.narasi}`;
-                fallbackCopy(textToCopy);
+                if(cancelBtn) {
+                    wrapper.querySelector('.script-section-display').classList.remove('hidden');
+                    wrapper.querySelector('.script-edit-view').classList.add('hidden');
+                    showNotification('Perubahan dibatalkan');
+                }
+                if(saveBtn) {
+                    const sectionKey = wrapper.dataset.sectionKey;
+                    const sectionData = currentScriptData[sectionKey];
+                    if (typeof sectionData === 'object' && sectionData !== null && !Array.isArray(sectionData)) {
+                        wrapper.querySelectorAll('textarea').forEach(area => { currentScriptData[sectionKey][area.dataset.field] = area.value; });
+                    } else {
+                        const mainTextarea = wrapper.querySelector('textarea');
+                        if (Array.isArray(sectionData)) { currentScriptData[sectionKey] = mainTextarea.value.split(',').map(item => item.trim()); } 
+                        else { currentScriptData[sectionKey] = mainTextarea.value; }
+                    }
+                    displayStructuredScript(currentScriptData);
+                    showNotification('Perubahan berhasil disimpan!', false);
+                }
+                if (copyBtn) {
+                    const sectionKey = wrapper.dataset.sectionKey;
+                    const sectionData = currentScriptData[sectionKey];
+                    let textToCopy = '';
+                    if (typeof sectionData === 'string') textToCopy = sectionData;
+                    else if (Array.isArray(sectionData)) textToCopy = isNaN(sectionData[0]) ? '#' + sectionData.join(' #') : sectionData.join(', ');
+                    else if (typeof sectionData === 'object' && sectionData !== null) textToCopy = `VISUAL: ${sectionData.visual}\nNARASI: ${sectionData.narasi}`;
+                    fallbackCopy(textToCopy);
+                }
             }
         });
 
