--- a/index.html
+++ b/index.html
@@ -182,9 +182,11 @@
              background-color: rgba(0, 0, 0, 0.2); border: 1px solid rgba(255, 255, 255, 0.1);
              display: flex; align-items: center; justify-content: center; gap: 0.5rem;
              cursor: pointer; transition: all 0.3s ease;
+             border-style: dashed;
         }
-        .file-upload-btn:hover {
+        .file-upload-btn:hover, .file-upload-btn.drag-over {
             border-color: rgba(167, 139, 250, 0.8);
+            background-color: rgba(167, 139, 250, 0.1);
         }
     </style>
 </head>
@@ -410,9 +412,9 @@
                 <div>
                     <label class="block text-sm font-medium text-slate-300 mb-2">4. Unggah Referensi Visual (Opsional)</label>
                     <div id="image-upload-container">
-                        <label for="image-upload" class="file-upload-btn w-full rounded-lg p-3">
+                        <label id="file-drop-zone" for="image-upload" class="file-upload-btn w-full rounded-lg p-3">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cloud-arrow-up-fill" viewBox="0 0 16 16"><path d="M8 2a5.53 5.53 0 0 0-3.594 1.342c-.766.66-1.321 1.52-1.464 2.383C1.266 6.095 0 7.555 0 9.318 0 11.366 1.708 13 3.781 13h8.906C14.502 13 16 11.57 16 9.773c0-1.636-1.242-2.969-2.834-3.194C12.923 3.999 10.69 2 8 2zm2.354 5.146a.5.5 0 0 1-.708.708L8.5 6.707V10.5a.5.5 0 0 1-1 0V6.707L6.354 7.854a.5.5 0 1 1-.708-.708l2-2a.5.5 0 0 1 .708 0l2 2z"/></svg>
-                            <span>Pilih Gambar...</span>
+                            <span>Pilih atau jatuhkan gambar...</span>
                         </label>
                         <input type="file" id="image-upload" class="hidden" accept="image/png, image/jpeg, image/webp">
                     </div>
@@ -1274,3 +1276,4 @@ Contoh struktur JSON yang diharapkan:
     </script>
 </body>
 </html>
+
