--- a/index.html
+++ b/index.html
@@ -566,6 +566,7 @@
         let uploadedImageBase64 = null;
         let calendarDate = new Date();
         let selectedDateForScheduling = null;
+        let itemToMove = null; // To track item being moved in calendar
 
 
         const hookCategoryStyles = {
