--- a/index.html
+++ b/index.html
@@ -1175,7 +1175,7 @@ Contoh struktur JSON yang diharapkan:
                 document.getElementById('explanation-body').innerHTML = `
                     <h3 class="font-bold text-slate-100 mb-1">Deskripsi</h3>
                     <p class="text-slate-300 mb-4">${explanationData.desc}</p>
-                    <h3 class="font-bold text-slate-100 mb-1">Paling Efektif Untuk</h3>
+                    <h3 class="font-bold text-lg text-slate-100 mb-1">Paling Efektif Untuk</h3>
                     <p class="efektif-title">${explanationData.efektif}</p>`;
                 modal.classList.add('visible');
             }
