--- a/index.html
+++ b/index.html
@@ -1174,14 +1174,11 @@ Contoh struktur JSON yang diharapkan:
                             <div class="p-2 rounded-md bg-slate-900/50">
                                 <div class="flex justify-between items-center mb-1">
                                     <label for="status-${dateStr}-${index}-${platform}" class="text-slate-300 text-sm font-semibold">${platform}</label>
-                                    <label for="time-${dateStr}-${index}-${platform}" class="text-slate-400 text-xs">Jam Posting</label>
-                                </div>
-                                <div class="flex items-center gap-2">
-                                    <select id="status-${dateStr}-${index}-${platform}" class="status-select-per-platform w-full p-1 rounded text-xs" data-date="${dateStr}" data-index="${index}" data-platform="${platform}">
-                                        ${selectOptions}
-                                    </select>
                                     <input type="time" value="${currentTime}" id="time-${dateStr}-${index}-${platform}" class="time-input p-1 rounded text-xs w-24" data-date="${dateStr}" data-index="${index}" data-platform="${platform}">
                                 </div>
+                                <select id="status-${dateStr}-${index}-${platform}" class="status-select-per-platform w-full p-1 rounded text-xs mt-1" data-date="${dateStr}" data-index="${index}" data-platform="${platform}">
+                                    ${selectOptions}
+                                </select>
                             </div>
                         `;
                     });
