--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
             background: #1F2937;
             color: #F9FAFB;
         }
+        /* MODIFIED: Make clock icon white */
+        input[type="time"]::-webkit-calendar-picker-indicator {
+            filter: invert(1);
+        }
 
         .modern-btn {
             background: linear-gradient(90deg, #5F00D8, #A78BFA); border: none;
