--- a/index.html
+++ b/index.html
@@ -442,10 +442,7 @@
             <div id="script-result-container" class="modal-body space-y-5"></div>
             <div class="mt-4 pt-4 border-t border-slate-700/50 flex flex-col gap-3">
                 <div id="script-buttons" class="grid grid-cols-2 sm:grid-cols-4 gap-3" style="display:none;">
-                    <button id="schedule-btn" class="text-white font-bold py-2 px-4 rounded-lg bg-teal-600 hover:bg-teal-700 transition-colors">Jadwalkan</button>
-                    <button id="copy-all-script-btn" class="text-white font-bold py-2 px-4 rounded-lg bg-blue-600 hover:bg-blue-700 transition-colors">Salin Teks</button>
-                    <button id="copy-gdocs-btn" class="text-white font-bold py-2 px-4 rounded-lg bg-sky-600 hover:bg-sky-700 transition-colors">Export Docs</button>
-                    <button id="download-doc-btn" class="text-white font-bold py-2 px-4 rounded-lg bg-green-600 hover:bg-green-700 transition-colors">Download</button>
+                    <!-- This button will be added dynamically -->
                 </div>
                 <p id="script-disclaimer" class="text-xs text-slate-500 text-center italic" style="display:none;">*bisa disesuaikan sendiri menurut kebutuhan Anda</p>
             </div>
