--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
                 </div>
                  <div class="faq-entry">
                     <h3 class="font-bold text-lg text-slate-100">Mengapa ada kuota generate?</h3>
-                    <p class="mt-1">Kuota harian adalah fitur keamanan untuk melindungi Anda dari penggunaan berlebih yang tidak disengaja, yang mungkin bisa menimbulkan biaya dari Google. Ini membantu memastikan penggunaan API Key Anda tetap dalam batas wajar setiap harinya.</p>
+                    <p class="mt-1">Kuota harian adalah fitur keamanan untuk melindungi Anda dari penggunaan berlebih yang tidak disengaja, yang mungkin bisa menimbulkan biaya dari Google. Ini membantu memastikan penggunaan API Key Anda tetap dalam batas wjar setiap harinya.</p>
                 </div>
             </div>
         </div>
